--- a/CodeForces_Practice/cses/.vscode/settings.json
+++ b/CodeForces_Practice/cses/.vscode/settings.json
@@ -7,6 +7,7 @@
         "list": "cpp",
         "string": "cpp",
         "vector": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "random": "cpp"
     }
 }
