--- a/Leetcode/.vscode/settings.json
+++ b/Leetcode/.vscode/settings.json
@@ -7,6 +7,7 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "vector": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "ostream": "cpp"
     }
 }
