--- a/CodeForces_Practice/cses/.vscode/settings.json
+++ b/CodeForces_Practice/cses/.vscode/settings.json
@@ -8,6 +8,7 @@
         "string": "cpp",
         "vector": "cpp",
         "valarray": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "iosfwd": "cpp"
     }
 }
